--- a/angularapp/src/app/component/admin/user-account/user-account.component.html
+++ b/angularapp/src/app/component/admin/user-account/user-account.component.html
@@ -43,19 +43,62 @@
                   <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
                   <circle cx="12" cy="7" r="4"/>
                 </svg>
-                Username
+                First Name
               </label>
               <input 
                 type="text" 
-                [(ngModel)]="newUser.username" 
-                name="username" 
-                placeholder="Enter username"
+                [(ngModel)]="newUser.firstName" 
+                name="firstName" 
+                placeholder="Enter first name"
                 required
                 class="form-input"
-                #username="ngModel"
+                #firstName="ngModel"
               >
-              <div class="error-message" *ngIf="username.invalid && username.touched">
-                Username is required
+              <div class="error-message" *ngIf="firstName.invalid && firstName.touched">
+                First name is required
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="form-label">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                  <polyline points="22,6 12,13 2,6"/>
+                </svg>
+                Email
+              </label>
+              <input 
+                type="email" 
+                [(ngModel)]="newUser.email" 
+                name="email" 
+                placeholder="Enter email"
+                required
+                class="form-input"
+                #email="ngModel"
+              >
+              <div class="error-message" *ngIf="email.invalid && email.touched">
+                Email is required
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="form-label">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+                </svg>
+                Phone Number
+              </label>
+              <input 
+                type="tel" 
+                [(ngModel)]="newUser.phoneNumber" 
+                name="phoneNumber" 
+                placeholder="Enter phone number"
+                required
+                class="form-input"
+                #phoneNumber="ngModel"
+              >
+              <div class="error-message" *ngIf="phoneNumber.invalid && phoneNumber.touched">
+                Phone number is required
               </div>
             </div>
 
@@ -186,9 +229,9 @@
                 <td class="username">
                   <div class="user-info">
                     <div class="user-avatar">
-                      <span>{{ user.username.charAt(0).toUpperCase() }}</span>
+                      <span>{{ user.firstName.charAt(0).toUpperCase() }}</span>
                     </div>
-                    <span>{{ user.username }}</span>
+                    <span>{{ user.firstName }}</span>
                   </div>
                 </td>
                 <td class="user-role">
